--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ nav ul li a:hover::after {
 
 .work-list {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+	grid-template-columns: repeat(3, 1fr);
 	grid-gap: 40px;
 	margin-top: 50px;
 }
@@ -234,6 +234,10 @@ nav ul li a:hover::after {
 	border-radius: 10px;
 	position: relative;
 	overflow: hidden;
+}
+
+.work:nth-child(3n+1) {
+	clear: left;
 }
 
 .work img {
@@ -293,7 +297,7 @@ nav ul li a:hover::after {
 }
 
 .btn {
-	display: block;
+	display: none;
 	margin: 50px auto;
 	width: fit-content;
 	border: 1px solid #ff004f;
@@ -302,10 +306,20 @@ nav ul li a:hover::after {
 	text-decoration: none;
 	color: #fff;
 	transition: background 0.5s;
+	cursor: pointer;
 }
 
 .btn:hover {
 	background: #ff004f;
+}
+
+.show-btn {
+	display: block;
+}
+
+.additional,
+.hidden {
+	display: none;
 }
 
 /* Contact Section */
